[package]
name = "mkl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "mkl"
path = "src/lib.rs"

[[example]]
name = "normal"
path = "examples/normal.rs"


[dependencies]
burn = { version = "0.16.0", features = ["autodiff", "ndarray"] }
linfa-nn = "0.7.0"
ndarray = "0.15.6"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
statrs = "0.18.0"
argparse = "0.2.2"

